# FantasiaDataPlaneAgent

./: .env.development  .env.example  .env.production  .env.test  .gitignore  README.md  TESTING.md  __init__.py  config.yaml  main.py  pyproject.toml  requirements.txt  run_tests.py  start.sh  test_manual_shutdown.py  test_shutdown.py
config/: __init__.py  config.py
docs/: DataPlaneAgent_MVP.md
middleware/: __init__.py  correlation.py
models/: __init__.py  commands.py  enums.py  messaging.py  quota.py  server.py  session.py  usage.py
routers/: __init__.py  health.py  metrics.py
services/: __init__.py  command_processor.py  control_plane_client.py  health_metrics.py  redis_client.py  redis_consumer.py
tests/: conftest.py
tests/integration/: test_api_integration.py  test_end_to_end.py  test_redis_consumer_integration.py
tests/unit/: test_connection_state.py  test_control_plane_client.py  test_models.py  test_redis_client.py
tests/unit/services/: test_control_plane_client_shutdown.py
utils/: __init__.py  connection_state.py  logging.py
